tests/negative/typecheck/call_non_fn.orng
// call_non_fn.orng:7:6: error: expected function type for call, got `Int`
//     x()
//     ^
// 
fn main() -> Int {
    let x = 4
    x()
}